--- a/_includes/pub-home.html
+++ b/_includes/pub-home.html
@@ -46,7 +46,7 @@ pre{
 
 <!-- if there is a pdf then put the pdf button -->
 {% if post.paperurl %}
-<a href= "{{ post.paperurl}}" target="_blank"><button class="btn btn-success btm-sm">PDF</button></a>
+<a href= "{{ post.paperurl}}" target="_blank"><button class="--success">PDF</button></a>
 {% endif %}
 
 <!-- if there is a doi then make a link -->
@@ -64,6 +64,7 @@ pre{
 <button class="btn btn-danger btm-sm"  onclick="toggleBibtex{{post.key}}()">BIB</button>
 {% endif %}
 
+<!-- make a abstract button -->
 {% if post.abstract %}
 <button class="btn btn-warning btm-sm"  onclick="toggleAbstract{{post.key}}()">ABSTRACT</button>
 {% endif %}
