tried buttong again

--- a/_includes/pub-home.html
+++ b/_includes/pub-home.html
@@ -46,7 +46,7 @@ pre{
 
 <!-- if there is a pdf then put the pdf button -->
 {% if post.paperurl %}
-<a href= "{{ post.paperurl}}" target="_blank"><button class="--success btm-sm">PDF</button></a>
+<a href= "{{ post.paperurl}}" target="_blank"><button class="btn success">PDF</button></a>
 {% endif %}
 
 <!-- if there is a doi then make a link -->
