--- a/_includes/pub-home.html
+++ b/_includes/pub-home.html
@@ -17,7 +17,7 @@
 {% endif %}
 
 <style>
-.btn{
+.button{
     margin-bottom:5px;
     padding-top:0px;
     padding-bottom:0px;
@@ -33,6 +33,17 @@ pre{
     word-wrap: break-word; 
     width:100%; overflow-x:auto;
 }
+  
+.button1 {
+  background-color: white; 
+  color: black; 
+  border: 2px solid #4CAF50;
+}
+
+.button1:hover {
+  background-color: #4CAF50;
+  color: white;
+}
 </style>
 
 <!-- This makes the title -->
@@ -46,7 +57,7 @@ pre{
 
 <!-- if there is a pdf then put the pdf button -->
 {% if post.paperurl %}
-<a href= "{{ post.paperurl}}" target="_blank"><button class="btn success">PDF</button></a>
+<a href= "{{ post.paperurl}}" target="_blank"><button class="button button1">PDF</button></a>
 {% endif %}
 
 <!-- if there is a doi then make a link -->
