--- a/_includes/pub-home.html
+++ b/_includes/pub-home.html
@@ -18,12 +18,13 @@
 
 <style>
 .button{
+    border-radius: 8px;
     margin-bottom:5px;
     padding-top:0px;
     padding-bottom:0px;
     padding-left:15px;
     padding-right:15px;
-    height:20px:
+    height:15px:
 }
 pre{
     white-space: pre-wrap;  
@@ -34,14 +35,25 @@ pre{
     width:100%; overflow-x:auto;
 }
   
-.button1 {
+.buttonpdf {
   background-color: white; 
-  color: black; 
-  border: 2px solid #4CAF50;
+  color: #f44336; 
+  border: 2px solid #f44336;
 }
 
-.button1:hover {
-  background-color: #4CAF50;
+.buttonpdf:hover {
+  background-color: #f44336;
+  color: white;
+}
+  
+.buttondoi {
+  background-color: white; 
+  color: black; 
+  border: 2px solid black;
+}
+
+.buttondoi:hover {
+  background-color: black;
   color: white;
 }
 </style>
@@ -57,27 +69,27 @@ pre{
 
 <!-- if there is a pdf then put the pdf button -->
 {% if post.paperurl %}
-<a href= "{{ post.paperurl}}" target="_blank"><button class="button button1">PDF</button></a>
+<a href= "{{ post.paperurl}}" target="_blank"><button class="button buttonpdf">PDF</button></a>
 {% endif %}
 
 <!-- if there is a doi then make a link -->
 {% if post.doi %}
 <!-- if type is unpublished then make an arxiv button -->
 {% if post.type == 'unpublished' %}
-<a href="{{ post.doi | prepend: 'https://arxiv.org/abs/' }}" target="_blank"><button class="btn btn-primary btm-sm">ARXIV</button></a>
+<a href="{{ post.doi | prepend: 'https://arxiv.org/abs/' }}" target="_blank"><button class="button buttondoi">ARXIV</button></a>
 {% else %}
-<a href="{{ post.doi | prepend: 'http://doi.org/' }}" target="_blank"><button class="btn btn-primary btm-sm">DOI</button></a>
+<a href="{{ post.doi | prepend: 'http://doi.org/' }}" target="_blank"><button class="button buttondoi">DOI</button></a>
 {% endif %}
 {% endif %}
 
 <!-- make a bib button -->
 {% if post.bib %}
-<button class="btn btn-danger btm-sm"  onclick="toggleBibtex{{post.key}}()">CITE</button>
+<button class="button buttondoi"  onclick="toggleBibtex{{post.key}}()">CITE</button>
 {% endif %}
 
 <!-- make a abstract button -->
 {% if post.abstract %}
-<button class="btn btn-warning btm-sm"  onclick="toggleAbstract{{post.key}}()">ABSTRACT</button>
+<button class="button buttondoi"  onclick="toggleAbstract{{post.key}}()">ABSTRACT</button>
 {% endif %}
 
 <!-- make the boxes after the buttons so it doesnt move the buttons -->
