--- a/_includes/pub-home.html
+++ b/_includes/pub-home.html
@@ -19,12 +19,13 @@
 <style>
 .button{
     border-radius: 8px;
-    font-size: 10px;
+    font-size: 12px;
     margin-bottom:5px;
     padding-top:0px;
     padding-bottom:0px;
     padding-left:15px;
-    padding-right:15px:
+    padding-right:15px;
+    height: 12px:
 }
 pre{
     white-space: pre-wrap;  
