--- a/_includes/pub-home.html
+++ b/_includes/pub-home.html
@@ -34,6 +34,7 @@ pre{
     white-space: -o-pre-wrap; 
     word-wrap: break-word; 
     width:100%; overflow-x:auto;
+    font-size: 11px;
 }
   
 .buttonpdf {
