--- a/_includes/pub-home.html
+++ b/_includes/pub-home.html
@@ -61,9 +61,10 @@ pre{
   {% if post.link %}
     <a href="{{ post.link }}">{{ title }}</a> <a href="{{ base_path }}{{ post.url }}" rel="permalink"><i class="fa fa-link" aria-hidden="true" title="permalink"></i><span class="sr-only">Permalink</span></a>
   {% else %}
-    <a href="{{ base_path }}{{ post.url }}" rel="permalink">{{ title }}</a>
+    <a>{{ title }}</a>
   {% endif %}
-</h3>
+</h3 class="archive__item-title" itemprop="headline">
+
 
 <p>{{post.authors}}</p>
 
