--- a/_includes/pub-home.html
+++ b/_includes/pub-home.html
@@ -57,14 +57,7 @@ pre{
 </style>
 
 <!-- This makes the title -->
-<h3 class="archive__item-title" itemprop="headline">
-  {% if post.link %}
-    <a href="{{ post.link }}">{{ title }}</a> <a href="{{ base_path }}{{ post.url }}" rel="permalink"><i class="fa fa-link" aria-hidden="true" title="permalink"></i><span class="sr-only">Permalink</span></a>
-  {% else %}
-    <a>{{ title }}</a>
-  {% endif %}
-</h3 class="archive__item-title" itemprop="headline">
-
+<h3>{{ title }}</h3>
 
 <p>{{post.authors}}</p>
 
