--- a/_includes/pub-home.html
+++ b/_includes/pub-home.html
@@ -105,17 +105,25 @@ pre{
 <script>
 function toggleBibtex{{post.key}}(parameter) {
     var x= document.getElementById('b{{post.key}}');
-    if (x.style.display === 'none') {
+	var y= document.getElementById('a{{post.key}}');
+    if (x.style.display === 'none') && (y.style.display === 'none') {
         x.style.display = 'block';
-    } else {
+	} else if (x.style.display === 'none') && (y.style.display === 'block') {
+		y.style.display = 'none';
+		x.style.display = 'block';
+	} else {
         x.style.display = 'none';
     }
 }
 function toggleAbstract{{post.key}}(parameter) {
     var x= document.getElementById('a{{post.key}}');
-    if (x.style.display === 'none') {
+	var y= document.getElementById('b{{post.key}}');
+    if (x.style.display === 'none') && (y.style.display === 'none') {
         x.style.display = 'block';
-    } else {
+	} else if (x.style.display === 'none') && (y.style.display === 'block') {
+		y.style.display = 'none';
+		x.style.display = 'block';
+	} else {
         x.style.display = 'none';
     }
 }
