--- a/_includes/pub-home.html
+++ b/_includes/pub-home.html
@@ -117,7 +117,7 @@ function toggleBibtex{{post.key}}(parameter) {
 }
 function toggleAbstract{{post.key}}(parameter) {
     var x= document.getElementById('a{{post.key}}');
-    if (x.style.display === 'none') && (y.style.display === 'none') {
+    if (x.style.display === 'none') {
         x.style.display = 'block';
 	} else {
         x.style.display = 'none';
