now update abstract logic

--- a/_includes/pub-home.html
+++ b/_includes/pub-home.html
@@ -116,7 +116,11 @@ function toggleBibtex{{post.key}}(parameter) {
 }
 function toggleAbstract{{post.key}}(parameter) {
     var x= document.getElementById('a{{post.key}}');
-    if (x.style.display === 'none') {
+    var y= document.getElementById('b{{post.key}}');
+    if ((x.style.display === 'none') && (y.style.display === 'none')) {
+        x.style.display = 'block';
+    } else if ((x.style.display === 'none') && (y.style.display === 'block')) {
+        y.style.display = 'none';
         x.style.display = 'block';
     } else {
         x.style.display = 'none';
