--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,9 +15,10 @@
   document.documentElement.className = document.documentElement.className.replace(/\bno-js\b/g, '') + ' js ';
 </script>
 
+<script src="{{ base_path }}/script.js" type="text/javascript"></script>
+
 <!-- For all browsers -->
 <link rel="stylesheet" href="{{ base_path }}/assets/css/main.css">
 
 <meta http-equiv="cleartype" content="on">
 
-<script src="script.js" type="text/javascript"></script>
