--- a/_includes/analytics-providers/custom.html
+++ b/_includes/analytics-providers/custom.html
@@ -1,3 +1,3 @@
 <!-- start custom analytics snippet -->
-
+<script async data-id="101072216" src="//static.getclicky.com/js"></script>
 <!-- end custom analytics snippet -->
